--- a/Sem2/personal/react-training/package.json
+++ b/Sem2/personal/react-training/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reacttutorial",
+  "name": "react-training",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
